crates/wac-parser/tests/parser/fail/duplicate-package-decl.wac
package test:comp;
package test:comp;